<resources>
    <string name="app_name">TimeSmart</string>
    //Bottom Nav Title
    <string name="nav_title_home">Home</string>
    <string name="nav_title_history">History</string>
    <string name="nav_title_reminder">Reminder</string>
    <string name="nav_title_activityTypes">Types</string>

    //TextView
    <string name="tv_activity_type_name">Name of activity...</string>
    <string name="tv_home_activity_name">ActivityName</string>
    <string name="tv_time_started">--:-- -</string>
    <string name="tv_time_counting_place_holder">00:00:00</string>
    <string name="tv_date_place_holder">--- --, ----</string>
    <string name="tv_time_start_end">-:-- - - -:-- -</string>
    <string name="tv_started_ended_date">--- --, ----</string>
    <string name="tv_started_ended_time">hh:mm a</string>

    //TextView-Label
    <string name="tv_label_1">Fill all the details and save new activity type.</string>
    <string name="tv_label_2">Fill all the details and update current activity type.</string>
    <string name="tv_label_icon">Icon</string>
    <string name="tv_label_color">Color</string>
    <string name="tv_label_name">Name</string>
    <string name="tv_no_history">Nothing tracked for selected period.</string>
    <string name="tv_no_history_1">Select the date above to change the period or \n Go to home tab and start your activity.</string>
    <string name="tv_activity_type_label">Activity Type</string>
    <string name="tv_started_on_label">Started on</string>
    <string name="tv_ended_by_label">Ended by</string>
    <string name="tv_time_tracked_label">Time tracked:</string>
    <string name="tv_no_activity_type_label">No Activity Types</string>
    <string name="tv_no_activity_type_label_1">Click + to add new activity type</string>
    <string name="tv_no_activity_type_label_3">Go to TYPES tab and click + to add new activity type.</string>

    //Edit Text
    <string name="etAddActivityTypeName">Enter Name</string>
    <string name="etCommentDetailsHistory">Comment</string>

    //Button
    <string name="btn_cancel">Cancel</string>
    <string name="btn_save">Save</string>
    <string name="btn_update">Update</string>
    <string name="btn_choose_color">Select Color</string>
    <string name="btn_day">Day</string>
    <string name="btn_week">Week</string>
    <string name="btn_month">Month</string>
    <string name="btn_year">Year</string>


    //Side Option Menu
    <string name="optEdit">Edit</string>
    <string name="optDelete">Delete</string>

    //DropdownMenu
    <string name="dropdown_menu_icon">Select an icon...</string>
    <string-array name="icon_names">
        <item>airport</item>
        <item>balloon</item>
        <item>bathtub</item>
        <item>bed</item>
        <item>body_positive_female</item>
        <item>broom</item>
        <item>car</item>
        <item>city_railway_station</item>
        <item>coffee</item>
        <item>confetti</item>
        <item>developer</item>
        <item>dining_room</item>
        <item>doctor_female</item>
        <item>doctor_male</item>
        <item>drive</item>
        <item>exit_sign</item>
        <item>fan</item>
        <item>farmer</item>
        <item>food_cart</item>
        <item>food_service</item>
        <item>garage</item>
        <item>garbage_truck</item>
        <item>gas_station</item>
        <item>group_task</item>
        <item>hard_working</item>
        <item>hdd</item>
        <item>heavy</item>
        <item>jump</item>
        <item>kitchen_room</item>
        <item>leader</item>
        <item>leadership</item>
        <item>light_on</item>
        <item>man_in_a_tuxedo</item>
        <item>man_with_dog</item>
        <item>meal</item>
        <item>memory_slot</item>
        <item>micro_sd</item>
        <item>motherboard</item>
        <item>office_phone</item>
        <item>outdoor_swimming_pool</item>
        <item>pick_up</item>
        <item>playground</item>
        <item>portable_toilet</item>
        <item>processor</item>
        <item>restaurant_building</item>
        <item>restaurant_menu</item>
        <item>shower</item>
        <item>sleeping_in_bed</item>
        <item>spy</item>
        <item>strike</item>
        <item>tableware</item>
        <item>taxi</item>
        <item>taxi_location</item>
        <item>tea_pair</item>
        <item>technical_support</item>
        <item>toilet</item>
        <item>toothbrush</item>
        <item>tourist_guide</item>
        <item>training</item>
        <item>transportation</item>
        <item>video_card</item>
        <item>voice_recognition</item>
        <item>warehouse</item>
        <item>washing_machine</item>
        <item>waste</item>
        <item>wharf</item>
        <item>woman_riding_bike</item>
        <item>yard_work</item>
        <item>cook</item>
        <item>housework</item>
        <item>read</item>
        <item>shop</item>
        <item>sleep</item>
        <item>sport</item>
        <item>study</item>
        <item>transport</item>
        <item>walk</item>
        <item>work</item>

    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>