<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="500dp"
    tools:context=".ui.personal_time_track.history.TimeTrackedDetailsDialogFragment">

    <TextView
        android:id="@+id/tvActivityTypeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/tv_activity_type_label"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivIconDetailsHistory"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_image_place_holder"
        app:layout_constraintStart_toStartOf="@+id/tvActivityTypeLabel"
        app:layout_constraintTop_toBottomOf="@+id/tvActivityTypeLabel" />

    <TextView
        android:id="@+id/tvActivityTypeNameDetailsHistory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/tv_activity_type_name"
        android:textColor="@color/text_color_1"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/ivIconDetailsHistory"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivIconDetailsHistory"
        app:layout_constraintTop_toTopOf="@+id/ivIconDetailsHistory" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="18dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        app:counterEnabled="true"
        app:counterMaxLength="50"
        app:endIconMode="clear_text"
        app:helperTextEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivIconDetailsHistory">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etCommentDetailsHistory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/etCommentDetailsHistory"
            android:maxLength="50"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:id="@+id/divider6"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <TextView
        android:id="@+id/tvStartedOnLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/tv_started_on_label"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider6" />

    <TextView
        android:id="@+id/tvStartedOnDetailsHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/tv_started_ended_date"
        android:textColor="@color/text_color_1"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/tvStartedOnLabel"
        app:layout_constraintTop_toBottomOf="@+id/tvStartedOnLabel" />

    <TextView
        android:id="@+id/tvStartedTimeDetailsHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/tv_started_ended_time"
        android:textColor="@color/text_color_1"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvStartedOnDetailsHistory"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvStartedOnDetailsHistory" />

    <TextView
        android:id="@+id/tvEndOfLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/tv_ended_by_label"
        app:layout_constraintStart_toStartOf="@+id/tvStartedOnDetailsHistory"
        app:layout_constraintTop_toBottomOf="@+id/tvStartedOnDetailsHistory" />

    <TextView
        android:id="@+id/tvEndedDateDetailsHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/tv_started_ended_date"
        android:textColor="@color/text_color_1"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/tvEndOfLabel"
        app:layout_constraintTop_toBottomOf="@+id/tvEndOfLabel" />

    <TextView
        android:id="@+id/tvEndedTimeDetailsHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/tv_started_ended_time"
        android:textColor="@color/text_color_1"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvEndedDateDetailsHistory"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvEndedDateDetailsHistory" />

    <TextView
        android:id="@+id/tvTimeTrackedLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/tv_time_tracked_label"
        android:textColor="@color/text_color_3"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/tvEndedDateDetailsHistory"
        app:layout_constraintTop_toBottomOf="@+id/tvEndedDateDetailsHistory" />

    <TextView
        android:id="@+id/tvTimeTrackedDetailsHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/tv_time_counting_place_holder"
        android:textColor="@color/main_color"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tvTimeTrackedLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvTimeTrackedLabel" />

    <ImageButton
        android:id="@+id/btnSaveTimeTrackedHistoryDetails"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="24dp"
        android:background="@null"
        android:src="@drawable/ic_check"
        android:tint="@color/main_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTimeTrackedDetailsHistory" />

    <ImageButton
        android:id="@+id/btnDeleteTimeTrackedHistoryDetails"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="48dp"
        android:background="@null"
        android:scaleType="center"
        android:src="@drawable/ic_delete"
        android:tint="@color/main_color"
        app:layout_constraintBottom_toBottomOf="@+id/btnSaveTimeTrackedHistoryDetails"
        app:layout_constraintEnd_toStartOf="@+id/btnSaveTimeTrackedHistoryDetails"
        app:layout_constraintTop_toTopOf="@+id/btnSaveTimeTrackedHistoryDetails" />
</androidx.constraintlayout.widget.ConstraintLayout>