<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="500dp"
    tools:context=".ui.personal_time_track.activityType.update.UpdateActivityTypeDialogFragment">

    <TextView
        android:id="@+id/textView13"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/tv_label_2"
        android:textAlignment="center"
        android:textColor="@color/text_color_1"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        app:counterEnabled="true"
        app:counterMaxLength="25"
        app:endIconMode="clear_text"
        app:helperTextEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEditActivityTypeName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/etAddActivityTypeName"
            android:maxLength="25"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/tv_label_name"
        android:textColor="@color/text_color_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="49dp"
        android:paddingEnd="5dp"
        android:text="@string/tv_label_icon"
        android:textColor="@color/text_color_1"
        app:layout_constraintBottom_toBottomOf="@+id/textView15"
        app:layout_constraintStart_toEndOf="@+id/textView15"
        app:layout_constraintTop_toTopOf="@+id/textView15" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/tv_label_color"
        android:textColor="@color/text_color_1"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnEditChooseColor"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        app:backgroundTint="@color/color_pick"
        app:elevation="0dp"
        app:layout_constraintStart_toStartOf="@+id/textView15"
        app:layout_constraintTop_toBottomOf="@+id/textView15"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.Button.Rounded"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <View
        android:id="@+id/divider4"
        android:layout_width="1dp"
        android:layout_height="25dp"
        android:background="@color/divider_color"
        app:layout_constraintBottom_toBottomOf="@+id/spinnerEditActivityType"
        app:layout_constraintEnd_toStartOf="@+id/spinnerEditActivityType"
        app:layout_constraintStart_toEndOf="@+id/btnEditChooseColor"
        app:layout_constraintTop_toTopOf="@+id/spinnerEditActivityType" />

    <Spinner
        android:id="@+id/spinnerEditActivityType"
        style="@android:style/Widget.Holo.Light.Spinner"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:dropDownWidth="match_parent"
        android:spinnerMode="dialog"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
        app:layout_constraintStart_toStartOf="@+id/textView16"
        app:layout_constraintTop_toBottomOf="@+id/textView16"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btnCancelEditActivityType"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/btn_cancel"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnUpdateActivityType"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/spinnerEditActivityType"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnUpdateActivityType"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="24dp"
        android:text="@string/btn_update"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
        app:layout_constraintStart_toEndOf="@+id/btnCancelEditActivityType"
        app:layout_constraintTop_toBottomOf="@+id/spinnerEditActivityType"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>